--- a/src/main/resources/templates/admin/user-info.html
+++ b/src/main/resources/templates/admin/user-info.html
@@ -20,128 +20,131 @@
 
 <div th:replace="fragments/common.html::header"></div>
 
-<div class="grid-center">
-    <h2 class="header" th:text="#{user_info}"/>
-    <form action="#" class="w-full max-w-3xl"
-          method="post" th:action="@{/admin/user-info/{id}(id = ${accountInfoEntity.getId()})}"
-          th:object="${DTO}">
-        <div class="div-with-two-columns">
-            <div class="one-column-of-two">
-                <label class="inputLabel"
-                       for="grid-first-name" th:text="#{first_name}"/>
-                <input class="input editable-input" disabled="disabled"
-                       id="grid-first-name" th:field="*{firstName}" type="text"/>
-                <ul th:if="${#fields.hasErrors('firstName')}">
-                    <li class="form-error" th:each="err : ${#fields.errors('firstName')}" th:text="#{${err}}"/>
-                </ul>
-            </div>
-            <div class="one-column-of-two">
-                <label class="inputLabel"
-                       for="grid-last-name" th:text="#{last_name}"/>
-                <input class="input editable-input" disabled="disabled"
-                       id="grid-last-name" th:field="*{lastName}" type="text"/>
-                <ul th:if="${#fields.hasErrors('lastName')}">
-                    <li class="form-error" th:each="err : ${#fields.errors('lastName')}" th:text="#{${err}}"/>
-                </ul>
-            </div>
-        </div>
-        <div class="div-with-two-columns px-3">
-            <label class="inputLabel"
-                   for="grid-password" th:text="#{email}"/>
-            <input class="input editable-input" disabled="disabled"
-                   id="grid-password" th:field="*{email}" type="email"/>
-            <ul th:if="${#fields.hasErrors('email')}">
-                <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
-            </ul>
-        </div>
-        <div class="div-with-two-columns">
-            <div class="one-column-of-two">
-                <label class="inputLabel" for="grid-enabled" th:text="#{enabled}"/>
-                <div class="relative">
-                    <select class="input editable-input block"
-                            disabled="disabled"
-                            id="grid-enabled"
-                            th:field="*{enabled}">
-                        <option th:selected="${accountInfoEntity.isEnabled()}" th:text="#{true}" th:value="true"/>
-                        <option th:selected="${accountInfoEntity.isEnabled()}" th:text="#{false}" th:value="false"/>
-                    </select>
-<!--                    <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">-->
-<!--                        <svg class="fill-current h-4 w-4" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">-->
-<!--                            <path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/>-->
-<!--                        </svg>-->
-<!--                    </div>-->
+<div class="max-w-full grid-center">
+    <div class="px-14 my-5">
+        <div class="min-w-full justify-self-stretch justify-items-stretch md:w-148 sm:96">
+            <h2 class="header" th:text="#{user_info}"/>
+            <form action="#" class="mt-5 mb-4 space-y-5"
+                  method="post" th:action="@{/admin/user-info/{id}(id = ${accountInfoEntity.getId()})}"
+                  th:object="${DTO}">
+                <div class="div-with-two-columns">
+                    <div class="one-column-of-two">
+                        <label class="inputLabel"
+                               for="grid-first-name" th:text="#{first_name}"/>
+                        <input class="input editable-input" disabled="disabled"
+                               id="grid-first-name" th:field="*{firstName}" type="text"/>
+                        <ul th:if="${#fields.hasErrors('firstName')}">
+                            <li class="form-error" th:each="err : ${#fields.errors('firstName')}" th:text="#{${err}}"/>
+                        </ul>
+                    </div>
+                    <div class="one-column-of-two">
+                        <label class="inputLabel"
+                               for="grid-last-name" th:text="#{last_name}"/>
+                        <input class="input editable-input" disabled="disabled"
+                               id="grid-last-name" th:field="*{lastName}" type="text"/>
+                        <ul th:if="${#fields.hasErrors('lastName')}">
+                            <li class="form-error" th:each="err : ${#fields.errors('lastName')}" th:text="#{${err}}"/>
+                        </ul>
+                    </div>
                 </div>
-                <ul th:if="${#fields.hasErrors('enabled')}">
-                    <li class="form-error" th:each="err : ${#fields.errors('enabled')}" th:text="#{${err}}"/>
-                </ul>
-            </div>
-            <div class="one-column-of-two">
-                <label class="inputLabel" for="grid-confirmed" th:text="#{confirmed}"/>
-                <input class="input"
-                       disabled="disabled" id="grid-confirmed" th:value="#{${accountInfoEntity.isConfirmed()}}"
-                       type="text"/>
-            </div>
+                <div class="div-with-two-columns px-3">
+                    <label class="inputLabel"
+                           for="grid-password" th:text="#{email}"/>
+                    <input class="input editable-input" disabled="disabled"
+                           id="grid-password" th:field="*{email}" type="email"/>
+                    <ul th:if="${#fields.hasErrors('email')}">
+                        <li class="form-error" th:each="err : ${#fields.errors('email')}" th:text="#{${err}}"/>
+                    </ul>
+                </div>
+                <div class="div-with-two-columns">
+                    <div class="one-column-of-two">
+                        <label class="inputLabel" for="grid-enabled" th:text="#{enabled}"/>
+                        <div class="relative">
+                            <select class="input editable-input"
+                                    disabled="disabled"
+                                    id="grid-enabled"
+                                    th:field="*{enabled}">
+                                <option th:selected="${accountInfoEntity.isEnabled()}" th:text="#{true}"
+                                        th:value="true"/>
+                                <option th:selected="${accountInfoEntity.isEnabled()}" th:text="#{false}"
+                                        th:value="false"/>
+                            </select>
+                        </div>
+                        <ul th:if="${#fields.hasErrors('enabled')}">
+                            <li class="form-error" th:each="err : ${#fields.errors('enabled')}" th:text="#{${err}}"/>
+                        </ul>
+                    </div>
+                    <div class="one-column-of-two">
+                        <label class="inputLabel" for="grid-confirmed" th:text="#{confirmed}"/>
+                        <input class="input"
+                               disabled="disabled" id="grid-confirmed" th:value="#{${accountInfoEntity.isConfirmed()}}"
+                               type="text"/>
+                    </div>
+                </div>
+                <div class="div-with-two-columns">
+                    <div class="one-column-of-two">
+                        <label class="inputLabel"
+                               for="grid-last_login" th:text="#{last_login}"/>
+                        <input class="input"
+                               disabled="disabled" id="grid-last_login" th:value="${accountInfoEntity.getLastLogin()}"
+                               type="text"/>
+                    </div>
+                    <div class="one-column-of-two">
+                        <label class="inputLabel"
+                               for="grid-last_login_ip" th:text="#{last_login_ip}"/>
+                        <input class="input"
+                               disabled="disabled" id="grid-last_login_ip"
+                               th:value="${accountInfoEntity.getLastLoginIp()}"
+                               type="text"/>
+                    </div>
+                </div>
+                <div class="div-with-two-columns">
+                    <div class="one-column-of-two">
+                        <label class="inputLabel"
+                               for="grid-last_fail_login" th:text="#{last_fail_login}"/>
+                        <input class="input"
+                               disabled="disabled" id="grid-last_fail_login"
+                               th:value="${accountInfoEntity.getLastFailLogin()}"
+                               type="text">
+                    </div>
+                    <div class="one-column-of-two">
+                        <label class="inputLabel"
+                               for="grid-last_fail_login_ip" th:text="#{last_fail_login_ip}"/>
+                        <input class="input"
+                               disabled="disabled" id="grid-last_fail_login_ip"
+                               th:value="${accountInfoEntity.getLastFailLoginIp()}"
+                               type="text">
+                    </div>
+                </div>
+                <div class="div-with-two-columns">
+                    <div class="one-column-of-two">
+                        <label class="inputLabel"
+                               for="grid-last_password_change" th:text="#{last_password_change}"/>
+                        <input class="input"
+                               disabled="disabled" id="grid-last_password_change"
+                               th:value="${accountInfoEntity.getLastPasswordChange()}"
+                               type="text">
+                    </div>
+                    <div class="one-column-of-two">
+                        <label class="inputLabel"
+                               for="grid-last_password_change_ip" th:text="#{last_password_change_ip}"/>
+                        <input class="input"
+                               disabled="disabled" id="grid-last_password_change_ip"
+                               th:value="${accountInfoEntity.getLastPasswordChangeIp()}"
+                               type="text">
+                    </div>
+                </div>
+                <div class="w-full grid-center">
+                    <p class="form-success mb-5" th:if="${showSuccess != null}"
+                       th:text="#{successfully_edited_user_info}"/>
+                    <input class="btn-primary px-10" hidden="hidden" id="submit-button" type="submit"/>
+                    <button class="btn-primary px-10" id="edit-button" th:text="#{edit}" type="button"/>
+                </div>
+            </form>
         </div>
-        <div class="div-with-two-columns">
-            <div class="one-column-of-two">
-                <label class="inputLabel"
-                       for="grid-last_login" th:text="#{last_login}"/>
-                <input class="input"
-                       disabled="disabled" id="grid-last_login" th:value="${accountInfoEntity.getLastLogin()}"
-                       type="text"/>
-            </div>
-            <div class="one-column-of-two">
-                <label class="inputLabel"
-                       for="grid-last_login_ip" th:text="#{last_login_ip}"/>
-                <input class="input"
-                       disabled="disabled" id="grid-last_login_ip" th:value="${accountInfoEntity.getLastLoginIp()}"
-                       type="text"/>
-            </div>
-        </div>
-        <div class="div-with-two-columns">
-            <div class="one-column-of-two">
-                <label class="inputLabel"
-                       for="grid-last_fail_login" th:text="#{last_fail_login}"/>
-                <input class="input"
-                       disabled="disabled" id="grid-last_fail_login"
-                       th:value="${accountInfoEntity.getLastFailLogin()}"
-                       type="text">
-            </div>
-            <div class="one-column-of-two">
-                <label class="inputLabel"
-                       for="grid-last_fail_login_ip" th:text="#{last_fail_login_ip}"/>
-                <input class="input"
-                       disabled="disabled" id="grid-last_fail_login_ip"
-                       th:value="${accountInfoEntity.getLastFailLoginIp()}"
-                       type="text">
-            </div>
-        </div>
-        <div class="div-with-two-columns">
-            <div class="one-column-of-two">
-                <label class="inputLabel"
-                       for="grid-last_password_change" th:text="#{last_password_change}"/>
-                <input class="input"
-                       disabled="disabled" id="grid-last_password_change"
-                       th:value="${accountInfoEntity.getLastPasswordChange()}"
-                       type="text">
-            </div>
-            <div class="one-column-of-two">
-                <label class="inputLabel"
-                       for="grid-last_password_change_ip" th:text="#{last_password_change_ip}"/>
-                <input class="input"
-                       disabled="disabled" id="grid-last_password_change_ip"
-                       th:value="${accountInfoEntity.getLastPasswordChangeIp()}"
-                       type="text">
-            </div>
-        </div>
-        <div class="w-full grid-center">
-            <p class="form-success mb-5" th:if="${showSuccess != null}"
-               th:text="#{successfully_edited_user_info}"/>
-            <input class="btn-primary px-10" hidden="hidden" id="submit-button" type="submit"/>
-            <button class="btn-primary px-10" id="edit-button" th:text="#{edit}" type="button"/>
-        </div>
-    </form>
+    </div>
 </div>
+
 
 <div th:replace="fragments/common.html::footer"></div>
 
