--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -17,52 +17,52 @@
         </div>
     </div>
 </div>
-<div class="nazmiane my-24">
+<div class="nazmiane my-24 mx-32">
     <div class="flex justify-around">
-        <div class="w-6/12 flex items-center first-in-order">
+        <div class="w-5/12 flex items-center first-in-order">
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
-        <div class="w-4/12 second-in-order">
+        <div class="w-3/12 second-in-order">
             <img th:src="@{/images/beeTwin.svg}"/>
         </div>
     </div>
     <div class="flex justify-around">
-        <div class="w-6/12 flex items-center first-in-order">
+        <div class="w-5/12 flex items-center first-in-order">
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
-        <div class="w-4/12 second-in-order">
+        <div class="w-3/12 second-in-order">
             <img th:src="@{/images/beeTwin.svg}"/>
         </div>
     </div>
     <div class="flex justify-around">
-        <div class="w-6/12 flex items-center first-in-order">
+        <div class="w-5/12 flex items-center first-in-order">
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
-        <div class="w-4/12 second-in-order">
+        <div class="w-3/12 second-in-order">
             <img th:src="@{/images/beeTwin.svg}"/>
         </div>
     </div>
     <div class="flex justify-around">
-        <div class="w-6/12 flex items-center first-in-order">
+        <div class="w-5/12 flex items-center first-in-order">
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
-        <div class="w-4/12 second-in-order">
+        <div class="w-3/12 second-in-order">
             <img th:src="@{/images/beeTwin.svg}"/>
         </div>
     </div>
     <div class="flex justify-around">
-        <div class="w-6/12 flex items-center first-in-order">
+        <div class="w-5/12 flex items-center first-in-order">
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
-        <div class="w-4/12 second-in-order">
+        <div class="w-3/12 second-in-order">
             <img th:src="@{/images/beeTwin.svg}"/>
         </div>
     </div>
     <div class="flex justify-around">
-        <div class="w-6/12 flex items-center first-in-order">
+        <div class="w-5/12 flex items-center first-in-order">
             <p class="text-justify h-fit" th:text="#{lorem_ipsum}"></p>
         </div>
-        <div class="w-4/12 second-in-order">
+        <div class="w-3/12 second-in-order">
             <img th:src="@{/images/beeTwin.svg}"/>
         </div>
     </div>
